--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "author": "Tairan Wang <tairan.wang@gmail.com>",
     "license": "MIT",
     "dependencies": {
-        "bootstrap": "^3.3.6",
-        "html5shiv": "^3.7.3",
-        "respond.js": "^1.4.2"
+        "jquery": "1.12.2",
+        "bootstrap": "3.3.6",
+        "html5shiv": "3.7.3",
+        "respond.js": "1.4.2"
     },
     "devDependencies": {
-        "gulp": "^3.9.0",
-        "gulp-uglify": "^1.5.1",
-        "gulp-concat": "^2.6.0"
+        "gulp": "3.9.0",
+        "gulp-uglify": "1.5.1",
+        "gulp-concat": "2.6.0"
     }
 }
