--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "author": "Tairan Wang <tairan.wang@gmail.com>",
     "license": "MIT",
     "dependencies": {
-        "jquery": "1.12.2",
         "bootstrap": "3.3.6",
         "html5shiv": "3.7.3",
+        "jquery": "1.12.2",
         "respond.js": "1.4.2"
     },
     "devDependencies": {
         "gulp": "3.9.0",
-        "gulp-uglify": "1.5.1",
-        "gulp-concat": "2.6.0"
+        "gulp-concat": "2.6.0",
+        "gulp-uglify": "1.5.1"
     }
 }
